# webgpt

./: .gitignore  alembic.ini  config.yaml  main.py  pyproject.toml
agents/rag_agent/: agent.py
alembic/: env.py
alembic/versions/: 9158c06e96ed_initial_table_generation.py
src/app/ingest/: __init__.py  script.py
src/app/retrieve/: __init__.py  script.py
src/markdowner/: markdowner.py
src/schemas/vectordb/: __init__.py  schema.py
src/utils/config/: __init__.py  config.py
src/utils/embedding/: __init__.py  text.py
src/utils/markdowner/: __init__.py  markdowner.py
src/utils/postgresdb/: __init__.py  postgresdb.py
src/utils/text_splitter/: character_splitter.py
src/utils/vectordb/: __init__.py  vectordb.py
src/utils/webcrawler/: __init__.py  webcrawler.py
tests/embedding/: test.py
