[project]
name = "webgpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "beautifulsoup4>=4.14.3",
    "datetime>=6.0",
    "fastapi[standard]>=0.124.0",
    "google-genai>=1.54.0",
    "langchain-text-splitters>=1.0.0",
    "markdownify>=1.2.2",
    "pymilvus>=2.6.5",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.0",
    "transformers>=4.57.3",
]
